# auto-ads-service

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  config.json  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_init.py
backend/app/: main.py
backend/app/api/: dependencies.py  router.py
backend/app/api/endpoints/: auth.py  cars.py
backend/app/core/: config.py  database.py  logging.py  mappers.py  security.py  utils.py
backend/app/models/: domain.py  schemas.py  sqlalchemy_models.py
backend/app/repositories/: base.py  cars.py  users.py
backend/app/scraper/: parser.py  worker.py
backend/app/services/: auth.py  cars.py
backend/scripts/: run.py  seed.py
bot/: .env.example  Dockerfile  README.md  pyproject.toml
bot/src/: bot.py  config.py  database.py  llm_agent.py  logging.py  models.py  search.py  sqlalchemy_models.py
frontend/: .pnp.cjs  Dockerfile  README.md  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  theme.ts
frontend/src/api/: client.ts
frontend/src/pages/: Cars.tsx  Login.tsx
frontend/src/types/: car.ts  index.ts  user.ts
